--- a/linux/i3/i3blocks.conf
+++ b/linux/i3/i3blocks.conf
@@ -42,10 +42,11 @@ command=date "+%H:%M:%S %d-%m-%Y"
 interval=5
 
 [weather.sh]
-interval=5
-
-[bat.sh]
-interval=1
+label=🌤️
+interval=once
 
 [vol.sh]
+interval=1
+
+[bat.sh]
 interval=1
