--- a/linux/i3/i3blocks.conf
+++ b/linux/i3/i3blocks.conf
@@ -16,8 +16,17 @@
 command=/home/manousos/scripts/i3/$BLOCK_NAME
 separator_block_width=15
 
-[eth.sh]
-interval=once
+#[packages.sh]
+#interval=once
+#signal=7
+#separator=false
+
+[torrent.sh]
+label=⬆️ ⬇️ 
+interval=1
+
+#[eth.sh]
+#interval=once
 
 [cpu_usage.sh]
 label=CPU: 
@@ -26,6 +35,11 @@ interval=1
 separator=false
 
 [cpu_temp.sh]
+color=#fe9a2f
+interval=1
+separator=false
+
+[cpu_freq.sh]
 color=#fe9a2f
 interval=1
 
@@ -41,9 +55,9 @@ interval=once
 command=date "+%H:%M:%S %d-%m-%Y"
 interval=5
 
-[weather.sh]
-label=🌤️
-interval=once
+#[weather.sh]
+#label=🌤️
+#interval=once
 
 [vol.sh]
 interval=once
@@ -51,3 +65,7 @@ signal=1
 
 [bat.sh]
 interval=1
+
+[lang.sh]
+interval=once
+signal=2
