--- a/linux/i3/i3blocks.conf
+++ b/linux/i3/i3blocks.conf
@@ -21,9 +21,9 @@ separator_block_width=15
 #signal=7
 #separator=false
 
-[torrent.sh]
-label=⬆️ ⬇️ 
-interval=1
+#[torrent.sh]
+#label=⬆️ ⬇️ 
+#interval=1
 
 #[eth.sh]
 #interval=once
