--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -21,15 +21,19 @@ separator_block_width=15
 #signal=7
 #separator=false
 
-#[torrent.sh]
-#label=⬆️ ⬇️ 
+#[speed.sh]
+#label=⬇️ 
 #interval=1
 
 #[eth.sh]
 #interval=once
 
+[rss.sh]
+label=📦 
+interval=once
+
 [cpu_usage.sh]
-label=CPU: 
+label= 
 color=#fe9a2f
 interval=1
 separator=false
@@ -44,15 +48,15 @@ color=#fe9a2f
 interval=1
 
 [memory.sh]
+label= 
 color=#fe9a2f
 interval=1
 
 [ssd.sh]
-label=SSD: 
 interval=once
 
-[date]
-command=date "+%H:%M:%S %d-%m-%Y"
+[date.sh]
+label=📅 
 interval=5
 
 #[weather.sh]
@@ -67,5 +71,6 @@ signal=1
 interval=1
 
 [lang.sh]
+label= 
 interval=once
 signal=2
