--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -28,12 +28,11 @@ separator_block_width=15
 #[eth.sh]
 #interval=once
 
+#[crypto.sh]
+#interval=once
+
 [mpd.sh]
 interval=1
-
-[rss.sh]
-label=📦 
-interval=once
 
 [cpu_usage.sh]
 label= 
@@ -70,6 +69,9 @@ interval=5
 interval=once
 signal=1
 
+[rss.sh]
+interval=once
+
 [bat.sh]
 interval=1
 
@@ -77,3 +79,4 @@ interval=1
 label= 
 interval=once
 signal=2
+separator=false
