--- a/config/newsboat/config
+++ b/config/newsboat/config
@@ -20,7 +20,7 @@
 #bind-key U show-urls
 #bind-key x pb-delete
 
-browser "brave %u"
+browser "firefox %u"
 
 color listnormal cyan default
 color listfocus black yellow standout bold
