--- a/i3/config
+++ b/i3/config
@@ -12,7 +12,7 @@
 set $mod Mod4
 
 #class	        <border>	<backgr>	<text>	<indicator>	<child_border>
-client.focused	#fe9a2f 	#fe9a2f 	#ffffff 	#fe9a2f 			#fe9a2f 
+client.focused	#754785 	#754785 	#ffffff 	#754785 			#754785 
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -20,14 +20,15 @@ client.focused	#fe9a2f 	#fe9a2f 	#ffffff 	#fe9a2f 			#fe9a2f
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
-font pango:DejaVu Sans Mono 8
+#font pango:DejaVu Sans Mono 8
+font pango:DejaVu Sans Mono, FontAwesome 8
 
 #i3-gaps
 
 # You can also use any non-zero value if you'd like to have a border
 for_window [class=".*"] border pixel 2
 
-gaps inner 15
+gaps inner 10
 gaps outer 5
 
 # The combination of xss-lock, nm-applet and pactl is a popular choice, so
@@ -52,7 +53,7 @@ exec --no-startup-id nm-applet
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec st
+bindsym $mod+Return exec urxvt
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -188,27 +189,27 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-				font pango:DejaVu Sans Mono 8
+				font pango:DejaVu Sans Mono, FontAwesome 12
         status_command i3blocks
 				strip_workspace_numbers yes
 				
 				colors {
 # 				<colorclass> <border> <background> <text>
-					focused_workspace  #4c7899 #fe9a2f #000000
+					focused_workspace  #4c7899 #2b7ab0 #000000
 					urgent_workspace  #4c7899 #a52a2a #FFFFFF
 				}
 }
 
 #Browser
-bindsym $mod+b exec brave
-bindsym $mod+t exec brave --tor
+bindsym $mod+b exec firefox
+bindsym $mod+t exec /home/manousos/packages/tor-browser/Browser/start-tor-browser --detach
 
 #Language
 exec --no-startup-id "setxkbmap -model pc105 -layout us,gr -option grp:alt_shift_toggle"
 bindsym Shift+Alt_L exec pkill -SIGRTMIN+2 i3blocks
 
 #Background
-exec_always feh --bg-fill /home/manousos/myfiles/wallpapers/belisarius.jpeg
+exec_always feh --bg-fill /home/manousos/myfiles/wallpapers/Plateau.jpeg
 
 #dmenu
 bindsym $mod+Shift+x exec /home/manousos/scripts/i3/prompt.sh "Are you sure you want to shutdown now?" "shutdown now"
@@ -216,10 +217,13 @@ bindsym $mod+Shift+b exec /home/manousos/scripts/i3/prompt.sh "Are you sure you 
 bindsym $mod+Insert exec /home/manousos/scripts/i3/mount.sh
 bindsym $mod+Delete exec /home/manousos/scripts/i3/unmount.sh
 
-#volume
+#Sound & Music
 bindsym XF86AudioRaiseVolume exec amixer -q set Master 2dB+ unmute && pkill -SIGRTMIN+1 i3blocks
 bindsym XF86AudioLowerVolume exec amixer -q set Master 2dB- unmute && pkill -SIGRTMIN+1 i3blocks
 bindsym XF86AudioMute exec amixer -q set Master toggle && pkill -SIGRTMIN+1 i3blocks
-bindcode 135 exec mpc toggle
+
+bindsym ctrl+slash exec mpc toggle
 bindsym ctrl+comma exec mpc prev
 bindsym ctrl+period exec mpc next
+
+bindsym $mod+m exec urxvt -e ncmpcpp
