--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -16,42 +16,46 @@
 command=/home/manousos/scripts/i3/$BLOCK_NAME
 separator_block_width=15
 
-#[packages.sh]
-#interval=once
-#signal=7
-#separator=false
-
-#[speed.sh]
-#label=⬇️ 
-#interval=1
-
-#[eth.sh]
-#interval=once
-
-#[crypto.sh]
-#interval=once
-
 [mpd.sh]
 interval=1
 
+[packages.sh]
+interval=once
+signal=7
+separator=false
+
+[speed.sh]
+label=⬇️ 
+interval=1
+
+[rss.sh]
+interval=once
+separator=false
+
+[eth.sh]
+interval=once
+
+[crypto.sh]
+interval=once
+
 [cpu_usage.sh]
 label= 
-color=#fe9a2f
+color=#2c8a99
 interval=1
 separator=false
 
 [cpu_temp.sh]
-color=#fe9a2f
+color=#2c8a99
 interval=1
 separator=false
 
 [cpu_freq.sh]
-color=#fe9a2f
+color=#2c8a99
 interval=1
 
 [memory.sh]
 label= 
-color=#fe9a2f
+color=#2c8a99
 interval=1
 
 [ssd.sh]
@@ -61,19 +65,16 @@ interval=once
 label=📅 
 interval=5
 
-#[weather.sh]
-#label=🌤️
+[weather]
+command=curl wttr.in/?format=1 | tr -d [:blank:]
+interval=once
+
+#[vol.sh]
 #interval=once
+#signal=1
 
-[vol.sh]
-interval=once
-signal=1
-
-[rss.sh]
-interval=once
-
-[bat.sh]
-interval=1
+#[bat.sh]
+#interval=1
 
 [lang.sh]
 label= 
