--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -35,7 +35,11 @@ separator=false
 [eth.sh]
 interval=once
 
-[crypto.sh]
+#[lithium.py]
+#interval=once
+
+[vuaa.py]
+label=📈
 interval=once
 
 [cpu_usage.sh]
@@ -62,7 +66,6 @@ interval=1
 interval=once
 
 [date.sh]
-label=📅 
 interval=5
 
 [weather]
