--- a/i3/config
+++ b/i3/config
@@ -24,12 +24,15 @@ client.focused	#754785 	#754785 	#ffffff 	#754785 			#754785
 font pango:DejaVu Sans Mono, FontAwesome 8
 
 #i3-gaps
-
 # You can also use any non-zero value if you'd like to have a border
 for_window [class=".*"] border pixel 2
 
 gaps inner 10
 gaps outer 5
+
+bindsym $mod+minus gaps outer current plus 5
+bindsym $mod+plus gaps outer current minus 5
+bindsym $mod+Shift+plus gaps outer current set 5
 
 # The combination of xss-lock, nm-applet and pactl is a popular choice, so
 # they are included here as an example. Modify as you see fit.
@@ -53,13 +56,13 @@ exec --no-startup-id nm-applet
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec urxvt
+bindsym $mod+Return exec --no-startup-id urxvt
 
 # kill focused window
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
+bindsym $mod+d exec --no-startup-id dmenu_run
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -199,6 +202,8 @@ bar {
 					urgent_workspace  #4c7899 #a52a2a #FFFFFF
 				}
 }
+#Dunst
+exec --no-startup-id dunst
 
 #Browser
 bindsym $mod+b exec firefox
